# website

./: .gitattributes  CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  test1.cpp
unit_tests/base_class_tests/: base_class.cpp  base_class_tests.cpp
unit_tests/files_manager_tests/: files_manager_tests.cpp
unit_tests/mocks/: mock_file_reader.cpp  mock_file_reader.h  mock_files_manager.cpp  mock_files_manager.h
webExe/: CMakeLists.txt  main.cpp
webLib/: CMakeLists.txt  hw.cpp  hw.h
webLib/base_class/: base_class.cpp  base_class.h
webLib/file_reader/: file_reader.h
webLib/file_reader/linux/: file_reader.cpp
webLib/file_reader/windows/: file_reader.cpp
webLib/files_manager/: files_manager.cpp  files_manager.h  files_manager_linux.cpp  files_manager_parser.cpp  files_manager_windows.cpp
webLib/files_manager/linux/: files_manager.cpp
webLib/files_manager/windows/: files_manager.cpp
webLib/helpers/: defines.h
